multi: allow querying actions by group ID
