# litrpc/firewall.swagger.json
@@ -197,6 +197,11 @@
           "type": "string",
           "format": "uint64",
           "description": "If specified, then only actions created before the given timestamp will be\nconsidered."
+        },
+        "group_id": {
+          "type": "string",
+          "format": "byte",
+          "description": "If specified, then only actions under the given group will be queried."
         }
       }
     },
